fixing listing size and scrollbar

--- a/src/Styles/general.scss
+++ b/src/Styles/general.scss
@@ -17,3 +17,23 @@ $layer3-background: #00000044;
   font-family: TitleFont;
   src: url(../fonts/LeagueSpartan-Bold.otf);
 }
+
+/* width */
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  background: #f1f1f1;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #888;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #555;
+}
