--- a/src/components/ListingContainer/ListingContainer.scss
+++ b/src/components/ListingContainer/ListingContainer.scss
@@ -8,6 +8,8 @@
     right: 0%;
     height: 100%;
     width: 50%;
+    overflow-y: auto;
+
     border-left: {
         color: #ffffff22;
         width: 1px;
